--- a/markup/home work 3v0/css/main.css
+++ b/markup/home work 3v0/css/main.css
@@ -62,13 +62,13 @@ footer {
 .footer {
     display: inline-block;
     height: 42px;
-	width: 100px;
+	width: 80px;
 	line-height: 43px;
 	}
 .footer2 {
     display: inline-block;
     height: 42px;
-	width: 200px;
+	width: 150px;
 	line-height: 43px;
 	float: right;
 	color:  #2c2c2c;
@@ -126,8 +126,12 @@ nav {
 	}	
 
 /*______________________content__________*/
+.ddd {margin-left: 300px;
+	text-shadow: 3px 0px 5px rgba(137, 150, 160, 0.68);
+	}
+
+
 .content1 {
-	margin-left: 300px;
 	border: 1px solid #dbdbdb ;
 	box-shadow: 0px 0px 8px 0px rgba(219,219,219,1);
     height: 400px;
@@ -138,9 +142,8 @@ nav {
 	}
 
 p {
-	margin: 40px 10px 100px 310px;
+	margin: 40px 10px 100px 10px;
 	line-height: 30px;
-	text-shadow: 3px 0px 5px rgba(137, 150, 160, 0.68);
 	}
 
 
