--- a/markup/home work 3v0/css/main.css
+++ b/markup/home work 3v0/css/main.css
@@ -5,7 +5,7 @@ html, body,  {
 
 .main {
 	height: 100%; 
-	margin-bottom: -60px; 
+	margin-bottom: -85px; 
 }
 
 .main:after {
@@ -14,8 +14,11 @@ html, body,  {
 }
 footer, .main:after {
 	clear: both;
-	height: 90px; 
-}
+	height: 85px; 
+}	
+/*_______________________*/
+
+
 body {
 	background-color: #f9f9f9;
 	font-family: OpenSans;
@@ -37,7 +40,7 @@ h1 {
 
 header {
 	display: block;
-	height: 46px;
+	height: 45px;
 	margin: 0 0 40px;
 	background-color: #4c4c4c;
 	box-shadow: 0px 0px 15px -3px rgba(0,0,0,0.75);
@@ -45,18 +48,19 @@ header {
 
 .top_menu {
 	display: inline-block;
-	height: 42px;
+	height: 45px;
 	width: 100px;
 	margin: 0;
 	padding: 0;
-	line-height: 43px;
+	line-height: 45px;
 }
 
 .top_menu_a {
 	color:  #ffffff;
 	text-shadow: 3px 0px 5px rgba(137, 150, 160, 0.68);
 	display: block;
-	border:1px solid #4c4c4c;
+	border-left:1px solid #4c4c4c;
+	border-right:1px solid #4c4c4c;
 	text-decoration: none;
 	text-align: center;
 }
@@ -71,7 +75,7 @@ header {
 
 footer {
 	display: block;
-	height: 46px;
+	height: 45px;
 	margin: 0 0 40px;
 	background-color: #e1e1e1;
 	box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.75);
@@ -79,15 +83,15 @@ footer {
 
 .footer {
 	display: inline-block;
-	height: 42px;
+	height: 45px;
 	width: 80px;
-	line-height: 43px;
+	line-height: 45px;
 }
 .footer2 {
 	display: inline-block;
-	height: 42px;
+	height: 45px;
 	padding-right: 20px;
-	line-height: 43px;
+	line-height: 45px;
 	float: right;
 	color:  #2c2c2c;
 	text-shadow: 3px 0px 5px rgba(137, 150, 160, 0.68);
@@ -150,21 +154,18 @@ nav {
 
 
 .content1 {
-	position: relative;
 	border: 1px solid #dbdbdb ;
 	box-shadow: 0px 0px 8px 0px rgba(219,219,219,1);
-	height: 400px;
+
+	
 }
 
 .con {display: block;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	margin: 0 auto;
 }
 
-p {
-	margin: 40px 10px 20px 10px;
+ p {	
+	margin: 50px 10px 20px 10px;
 	line-height: 30px;
 }
 
