--- a/markup/home work 5#2/css/main.css
+++ b/markup/home work 5#2/css/main.css
@@ -2,21 +2,16 @@ body {
 	font-family: tahoma, arial, sans-serif;
 }
 .wrapper {
-  position: relative;
+  
 	background-image:  url(../img/Background.png);	
 	background-size: cover;
 	background-color: #464646;
 	width: 100%;
-	height: 1028px;
+	padding: 210px 0;
 	background-position: center center;
 }
 
-.wrap-form {
-	position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+
 .clear_fix:after {
 	content: "";
 	clear: both;
