--- a/markup/home work 6/css/main.css
+++ b/markup/home work 6/css/main.css
@@ -126,7 +126,7 @@ a {
 	width: 907px;
 	height: 32px;
 	border:1px solid #0a1030;
-	background-image: -moz-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(44,48,52) 87%, rgb(87,96,104) 100%);
+	background-image:linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(44,48,52) 87%, rgb(87,96,104) 100%);
 	border-radius: 4px;
 	box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.75);
 	margin-top: 3px;
@@ -516,6 +516,8 @@ margin-bottom: 19px;
 	float: left;
 	margin: 5px 0 0 12px;
 }
+
+
 .brandLogo a:nth-last-child(5){
 	margin-left: 16px;
 }
