--- a/markup/home work 6/css/main.css
+++ b/markup/home work 6/css/main.css
@@ -1,8 +1,6 @@
 html, body {
 	height: 100%;
-	width: 100%;
-	max-width: 909px;
-	margin: 0 auto;
+	
 	font-family: arial;
 }
 .clear_fix:after {
@@ -15,6 +13,8 @@ html, body {
 }
 /*---Sticky Footer---*/
 .wrapper{
+	width: 909px;
+	margin: 0 auto;
 	min-height: 100%;
 	margin-bottom: -100px; 
 }
@@ -80,7 +80,7 @@ html, body {
 	color: #ffffff;
 	background-color: transparent;
 	padding:0;
-	margin: 2px 2px 0 0;
+	margin: 4px 2px 0 0;
 	cursor: pointer;
 }
 a {
@@ -534,6 +534,7 @@ margin-bottom: 19px;
 footer{
 	height: 100px;
 	width: 909px;
+	margin: 0 auto;
 	border-style: solid;
 	border-width: 1px;
 	border-color: rgb(36, 42, 60);
