--- a/markup/home work 7-8/css/resolution.css
+++ b/markup/home work 7-8/css/resolution.css
@@ -65,7 +65,7 @@ margin-top: 50px;
 
 /*--blue line--*/
 .blue-text {
-	margin: 75px 0px 0 14px ;
+	margin: 75px 0px 65px 14px ;
 	width: 21.6%;
 }
  .blue-text__second-line{
@@ -76,7 +76,7 @@ margin-top: 50px;
 } 
 
 .blue-text__link {
-	margin: 6px 11px 66px 0;
+	margin: 6px 11px 0px 0;
 }
 
 /*------------white line--------*/
@@ -149,6 +149,8 @@ margin-top: 50px;
 }
 .nav__par {
 	 margin-top: 28px;
+}
+
 }
 /*------------------*/
 /*-------480-767---*/
@@ -289,8 +291,8 @@ border-bottom: 2px solid transparent;
 
 /*--blue line--*/
 .background_blue {
-	padding-top: 16%;
-	padding-bottom: 10%
+	padding-top: 71px;
+	padding-bottom: 52px;
 }
 .blue-text {
 	float: left;
@@ -375,8 +377,8 @@ margin: 0px 6% 25px 6%;
 }
 /*-----grey line----*/
 .background_grey {
-	padding-top: 17%;
-	padding-bottom: 7%;	
+	padding-top: 80px;
+	padding-bottom: 35px;	
 } 
 .grey-text__first-line{
 	margin-bottom: 9px;
@@ -421,6 +423,8 @@ margin: 0px 6% 25px 6%;
 	float: none;
 	display: inline-block;
 	   margin-top: 31px;	 
+}
+
 }
 /*------------------*/
 /*-------0-479---*/
@@ -482,17 +486,18 @@ margin: 0px 6% 25px 6%;
 /*--blue line--*/
 
 .background_blue {
-	padding-top: 21%;
-	padding-bottom: 13%
+	padding-top: 67px;
+	padding-bottom: 50px;
 }
 .blue-text__other-line{	
 	height: 76px;
 } 
 .blue-text__link {
-	margin: 12px 0px 22px 0;
+	margin: 12px 0px 0px 0;
 }
 .blue-text {
 	width: 75%;
+	margin-bottom: 19px;
 }
 .blue-text--right{
 	margin-top: 13px;
@@ -533,7 +538,6 @@ margin: 0px 6% 25px 6%;
 .small-text__second-line {
   height: 17px;
   overflow: hidden;
-  margin-bottom: 
 } 
 .small-text__other-line {
   margin-top: 3px;
@@ -587,3 +591,4 @@ margin: 0px 6% 25px 6%;
 	margin-top: 40px;
 	margin-bottom: 147px;
 }	 
+}
