home work 7-8 full resolution corrected fonts\logo\letters

--- a/markup/home work 7-8/css/main.css
+++ b/markup/home work 7-8/css/main.css
@@ -316,7 +316,7 @@ html, body {
 	position: absolute;
 	width: 49px;
 	height: 51px;
-	background: url(../img/layer2.png);
+	background: url(../img/lay.png);
 	top: 20px;
 	left:-22px;
 }
