--- a/markup/home work 9/css/main.css
+++ b/markup/home work 9/css/main.css
@@ -1,16 +1,19 @@
  @font-face {
  	font-family:"LeagueGothic";
- 	src:url("../fonts/LeagueGothic/League_Gothic.eot") format("eot"),
- 	url("../fonts/LeagueGothic/League_Gothic.woff") format("woff"),
- 	url("../fonts/LeagueGothic/League_Gothic.ttf") format("truetype"),
- 	url("../fonts/LeagueGothic/League_Gothic.svg#LeagueGothic") format("svg");
- 	font-weight:normal;
- 	font-style:normal;
+src: url('../fonts/LeagueGothic/league_gothic-webfont.eot');
+    src: url('../fonts/LeagueGothic/league_gothic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/LeagueGothic/league_gothic-webfont.woff2') format('woff2'),
+         url('../fonts/LeagueGothic/league_gothic-webfont.woff') format('woff'),
+         url('../fonts/LeagueGothic/league_gothic-webfont.ttf') format('truetype'),
+         url('../fonts/LeagueGothic/league_gothic-webfont.svg#league_gothicregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
  }
 
  @font-face {
  	font-family:"Open Sans Light";
- 	src:url("../fonts/Open_Sans_Light/OpenSans-Light.eot") format("eot"),
+ 	src:url("../fonts/Open_Sans_Light/OpenSans-Light.eot") format("eot");
+ 	src:url("../fonts/Open_Sans_Light/OpenSans-Light.eot?#iefix") format("embedded-opentype"),
  	url("../fonts/Open_Sans_Light/OpenSans-Light.woff") format("woff"),
  	url("../fonts/Open_Sans_Light/OpenSans-Light.ttf") format("truetype"),
  	url("../fonts/Open_Sans_Light/OpenSans-Light.svg#OpenSans-Light") format("svg");
@@ -19,7 +22,8 @@
  	}
  @font-face {
  	font-family:"Open Sans Extrabold";
- 	src:url("../fonts/Open_Sans_Extrabold/OpenSans-ExtraBold.eot") format("eot"),
+ 	src:url("../fonts/Open_Sans_Extrabold/OpenSans-ExtraBold.eot") format("eot");
+ 	src:url("../fonts/Open_Sans_Extrabold/OpenSans-ExtraBold.eot?#iefix") format("embedded-opentype"),
  	url("../fonts/Open_Sans_Extrabold/OpenSans-ExtraBold.woff") format("woff"),
  	url("../fonts/Open_Sans_Extrabold/OpenSans-ExtraBold.ttf") format("truetype"),
  	url("../fonts/Open_Sans_Extrabold/OpenSans-ExtraBold.svg#OpenSans-Extrabold") format("svg");
@@ -27,17 +31,15 @@
  	font-style:normal;
  }
 
-html, body {
-	
-	font-family:"LeagueGothic", arial, sans-serif;
-	
-}
+
 aside,
 nav,
 footer,
 header,
 section { 
-    display: block
+    display: block;
+   
+	
 }
 .clearfix:after {
 	content: ""; 
@@ -91,6 +93,7 @@ section {
  	background-size: cover; 
 }
 .conteiner {
+	font-family:"LeagueGothic", arial, sans-serif;
 	text-align: center;
 	margin: 0 auto;	
 	max-width: 960px;
