--- a/markup/home work 9/css/transp.css
+++ b/markup/home work 9/css/transp.css
@@ -2,6 +2,12 @@
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000,endColorstr=#33000000); 
 }
 
+.background_image {
+	width: 100%;
+	background: url("../img/bg.jpg") ;
+-ms-filter:"progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/bg.jpg',sizingMethod='scale')";    	
+
+}
 .slide-link--head .slide-link__link {
 	height: 18px;
 	width: 18px;
