--- a/markup/home work 9/css/main.css
+++ b/markup/home work 9/css/main.css
@@ -10,26 +10,30 @@ src: url('../fonts/LeagueGothic/league_gothic-webfont.eot');
     font-style: normal;
  }
 
+@font-face {
+   	font-family:"Open Sans Light";
+    src: url('../fonts/Open_Sans_Light/opensans-light-webfont.eot');
+    src: url('../fonts/Open_Sans_Light/opensans-light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Open_Sans_Light/opensans-light-webfont.woff2') format('woff2'),
+         url('../fonts/Open_Sans_Light/opensans-light-webfont.woff') format('woff'),
+         url('../fonts/Open_Sans_Light/opensans-light-webfont.ttf') format('truetype'),
+         url('../fonts/Open_Sans_Light/opensans-light-webfont.svg#open_sanslight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
  @font-face {
- 	font-family:"Open Sans Light";
- 	src:url("../fonts/Open_Sans_Light/OpenSans-Light.eot") format("eot");
- 	src:url("../fonts/Open_Sans_Light/OpenSans-Light.eot?#iefix") format("embedded-opentype"),
- 	url("../fonts/Open_Sans_Light/OpenSans-Light.woff") format("woff"),
- 	url("../fonts/Open_Sans_Light/OpenSans-Light.ttf") format("truetype"),
- 	url("../fonts/Open_Sans_Light/OpenSans-Light.svg#OpenSans-Light") format("svg");
- 	  font-weight:normal;
- 	  font-style:normal;
- 	}
- @font-face {
- 	font-family:"Open Sans Extrabold";
- 	src:url("../fonts/Open_Sans_Extrabold/OpenSans-ExtraBold.eot") format("eot");
- 	src:url("../fonts/Open_Sans_Extrabold/OpenSans-ExtraBold.eot?#iefix") format("embedded-opentype"),
- 	url("../fonts/Open_Sans_Extrabold/OpenSans-ExtraBold.woff") format("woff"),
- 	url("../fonts/Open_Sans_Extrabold/OpenSans-ExtraBold.ttf") format("truetype"),
- 	url("../fonts/Open_Sans_Extrabold/OpenSans-ExtraBold.svg#OpenSans-Extrabold") format("svg");
- 	font-weight:normal;
- 	font-style:normal;
- }
+    font-family:"Open Sans Extrabold";
+    src: url('../fonts/Open_Sans_Extrabold/opensans-extrabold-webfont.eot');
+    src: url('../fonts/Open_Sans_Extrabold/opensans-extrabold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Open_Sans_Extrabold/opensans-extrabold-webfont.woff2') format('woff2'),
+         url('../fonts/Open_Sans_Extrabold/opensans-extrabold-webfont.woff') format('woff'),
+         url('../fonts/Open_Sans_Extrabold/opensans-extrabold-webfont.ttf') format('truetype'),
+         url('../fonts/Open_Sans_Extrabold/opensans-extrabold-webfont.svg#open_sansextrabold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 
 aside,
