--- a/js/js_19/css/main.css
+++ b/js/js_19/css/main.css
@@ -450,7 +450,7 @@ nav {
     float: left; }
   .brand__img {
     background: url(../image/links.png) no-repeat;
-    width: 100%;
+    width: 160px;
     height: 60px;
     display: inline-block;
     margin: auto; }
