--- a/js/js_19/css/main.scss
+++ b/js/js_19/css/main.scss
@@ -509,7 +509,7 @@ nav{
 	}
 	&__img{
 		background: url(../image/links.png) no-repeat;
-		width: 100%;
+		width: 160px;
 		height: 60px;
 		display:inline-block;
 		margin: auto;
